test_regress/t/t_force_func.out
%Error: t/t_force_func.v:26:  got='h0 exp='h00000001
%Error: t/t_force_func.v:34:  got='h0 exp='h00000002
%Error: t/t_force_func.v:39:  got='h0 exp='h00000003
%Error: t/t_force_func.v:43:  got='h0 exp='h00000003
